--- a/KeepingRunning/res/values/strings.xml
+++ b/KeepingRunning/res/values/strings.xml
@@ -3,6 +3,23 @@
 
     <string name="app_name">KeepingRunning</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
 
+    <!-- Home -->
+    <string name="run_record">Record</string>
+    <string name="start_activity">Start</string>
+
+    <!-- Run Type -->
+    <string name="title_activity_run_type">Choose Your Type</string>
+    <string name="run_type_one">Basic Mode</string>
+    <string name="run_type_two">Time Mode</string>
+    <string name="run_type_three">Distance Mode</string>
+    <string name="start_run">Run!</string>
+    <string name="duration">Duration:</string>
+    <string name="distance">Distance:</string>
+    <string name="time_unit">min</string>
+    <string name="length_unit">km</string>
+
+    <!-- Running -->
+    <string name="title_activity_running">Running</string>
+    
 </resources>
