--- a/KeepingRunning/res/values/strings.xml
+++ b/KeepingRunning/res/values/strings.xml
@@ -21,5 +21,7 @@
 
     <!-- Running -->
     <string name="title_activity_running">Running</string>
+    <string name="preset_task">Progress Achieved:</string>
+    <string name="task_notification">Good job! you finish the task!</string>
     
 </resources>
