--- a/KeepingRunning/res/values/strings.xml
+++ b/KeepingRunning/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="preset_task">Progress Achieved:</string>
     <string name="task_notification">Good job! you finish the task!</string>
 
-    <string name="title_activity_record">RecordActivity</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="title_activity_record">Record List</string>
+    <string name="speed">speed</string>
+    <string name="timer">timer</string>
+	
 </resources>
